Add EKS with Fargate and logging